Migrate to rxified versions of repositories, services and handlers